--- a/src/Hph/View/place.html.twig
+++ b/src/Hph/View/place.html.twig
@@ -4,12 +4,12 @@
 {% block content %}
     <div class="container text-center">
         <div class="row">
-            {% for i in range(0,5) %}
+            {%  for place in places %}
                 <div class="col-xs-6 col-sm-4">
                     <div class="thumbnail thumbnail-div lieux-thumbnail">
-                        <a href="http://tourisme-orleans.com/fr/orleans-decouvrir-orleans/71-parcs-et-jardins--5-10.html">
-                            <img src="../../../web/img/tristesse_contemporaine.jpg" class="img-responsive">
-                            <h3 class="thumbnail-title font-circula">Jardin de l'évêché</h3>
+                        <a href="{{ place.url }}">
+                            <img src="../../../web/img/{{ place.img }}" class="img-responsive places-img">
+                            <h3 class="thumbnail-title font-circula">{{ place.name }}</h3>
                         </a>
                     </div>
                 </div>
