--- a/src/Hph/View/artiste.html.twig
+++ b/src/Hph/View/artiste.html.twig
@@ -4,30 +4,36 @@
 <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 <script> AOS.init(); </script>
 <div class="container hidden-xs">
+    {% for artist in artists %}
     <div class="row">
         <div class="col-xs-8">
             <div class="content-div">
-                <h1 class="font-circula upper">La Jungle</h1>
-                <p>Une six-cordes et un casio. Il n’en faut parfois pas plus pour faire péter le mercure et irriter les yeux de sueur après deux breaks et trois accords. Deux singes rouquins, un très grand et un plus petit, vous emmènent dans leur milieu naturel : La Jungle !</p>
+                <h1 class="font-circula upper">{{ artist.name }}</h1>
+
+                <p>{{ artist.bio }}</p>
+
+
                 <div class="artiste-tag upper">
                     <h3 class="font-circula">France <span class="turquoise">/</span> Rouquins <span class="orange">/</span> Six-Cordes</h3>
                 </div>
                 <hr class="hr">
                 <div class="artiste-social text-center">
-                    <i class="fa fa-facebook-square social-logo" aria-hidden="true"></i>
-                    <i class="fa fa-twitter-square social-logo" aria-hidden="true"></i>
-                    <i class="fa fa-instagram social-logo" aria-hidden="true"></i>
-                    <i class="fa fa-spotify social-logo" aria-hidden="true"></i>
-                    <i class="fa fa-youtube-square social-logo" aria-hidden="true"></i>
+                    <a href="{{ artist.facebookUrl }}"><i class="fa fa-facebook-square social-logo" aria-hidden="true"></i></a>
+                    <a href="{{ artist.twitterUrl }}"><i class="fa fa-twitter-square social-logo" aria-hidden="true"></i></a>
+
+                    <a href="#"><i class="fa fa-spotify social-logo" aria-hidden="true"></i></a>
+                     <a href="{{ artist.youtube_channel_url }}"><i class="fa fa-youtube-square social-logo" aria-hidden="true"></i></a>
                 </div>
+
             </div>
             <br />
-            <iframe width="100%" height="480" src="https://www.youtube.com/embed/wHylQRVN2Qs" frameborder="0" allowfullscreen></iframe>
+
+          <iframe width="100%" height="480" src="{{ artist.videoUrl }}" frameborder="0" allowfullscreen></iframe>
 
         </div>
         <div class="col-xs-4">
             <div class="content-div upper">
-                <img src="../public/img/chuck.png" class="img-responsive">
+                <img src="../public/img/{{ artist.imagePath }}" class="img-responsive">
                 <div class="text-center">
                     <h2 class="font-circula">Vendredi 16 Septembre</h2>
                     <hr class="hr-small">
@@ -37,6 +43,7 @@
             </div>
         </div>
     </div>
+    {% endfor %}
 </div>
 <div class="visible-xs container">
     <div class="col-xs-12">
