--- a/src/Hph/View/place.html.twig
+++ b/src/Hph/View/place.html.twig
@@ -4,6 +4,7 @@
 {% block content %}
     <div class="container text-center">
         <div class="row">
+            <h2 class="white font-circula">Lieux du Festival</h2>
             {%  for place in places %}
                 <div class="col-xs-6 col-sm-4">
                     <div class="thumbnail thumbnail-div lieux-thumbnail">
@@ -14,6 +15,22 @@
                     </div>
                 </div>
             {% endfor %}
+        </div>
+        <div class="row">
+            <hr class="hr-min">
+            <h2 class="white font-circula">Showcases</h2>
+            {%  for showcase in showcases %}
+                <div class="col-xs-6 col-sm-4">
+                    <div class="thumbnail thumbnail-div lieux-thumbnail">
+                        <a href="{{ showcase.url }}">
+                            <img src="../../../web/img/{{ showcase.img }}" class="img-responsive places-img">
+                            <h3 class="thumbnail-title font-circula">{{ showcase.name }}</h3>
+                        </a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <div class="row">
             <div class="col-xs-12">
                 <hr class="hr">
                 <br />
