--- a/src/Hph/View/artiste.html.twig
+++ b/src/Hph/View/artiste.html.twig
@@ -22,7 +22,7 @@
                     <a href="{{ artist.twitterUrl }}"><i class="fa fa-twitter-square social-logo" aria-hidden="true"></i></a>
 
                     <a href="#"><i class="fa fa-spotify social-logo" aria-hidden="true"></i></a>
-                     <a href="{{ artist.youtube_channel_url }}"><i class="fa fa-youtube-square social-logo" aria-hidden="true"></i></a>
+                     <a href="{{ artist.youtubeUrl }}"><i class="fa fa-youtube-square social-logo" aria-hidden="true"></i></a>
                 </div>
 
             </div>
@@ -33,7 +33,7 @@
         </div>
         <div class="col-xs-4">
             <div class="content-div upper">
-                <img src="../public/img/{{ artist.imagePath }}" class="img-responsive">
+                <img src="../public/img/{{ artist.img_artist }}" class="img-responsive">
                 <div class="text-center">
                     <h2 class="font-circula">Vendredi 16 Septembre</h2>
                     <hr class="hr-small">
