--- a/web/css/style.css
+++ b/web/css/style.css
@@ -98,6 +98,10 @@ body {
         margin-bottom: 5%;
     }
 }
+.img-255 {
+    height: 255px!important;
+    width: 255px!important;
+}
 /*Fin General*/
 
 /*Navbar*/
@@ -362,8 +366,6 @@ body {
 }
 .prog-img {
     box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);
-    height: 255px!important;
-    width: 255px!important;
 }
 .prog-info {
     margin-top: 5%;
