--- a/src/Hph/View/back/place.html.twig
+++ b/src/Hph/View/back/place.html.twig
@@ -5,19 +5,22 @@
     <div class="container">
         <div class="col-md-offset-3 col-md-6">
             <div class="form-area text-center">
-                <form role="form">
-                    <br/>
-                    <h2 class="orange font-circula">Ajouter un lieu</h2>
+                <form method="POST" action="../../../../admin/admin.php?page=addPlace">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Votre nom" required>
+                        <label for="placeName">Nom du lieux</label>
+                        <input type="text" class="form-control" id="placeName" name="placeName" placeholder="Entrez le nom du lieu">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="email" name="email" placeholder="Votre e-mail" required>
+                        <label for="imgPlace">Photo du lieu</label>
+                        <input type="file" id="imgPlace" name="imgPlace">
+                        <p class="help-block">Aide à la photo</p>
                     </div>
-                    <div class="form-group">
-                        <textarea class="form-control" id="subject" name="subject" placeholder="Votre texte" rows="7" required></textarea>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="showcasePlace" value="1">Showcase
+                        </label>
                     </div>
-                    <button type="button" id="submit" name="submit" class="btn btn-default contact-btn">Envoyer votre message</button>
+                    <input type="submit" name="placeSubmit" class="btn btn-default" value="Créer">
                 </form>
             </div>
         </div>
