--- a/src/Hph/View/back/base.html.twig
+++ b/src/Hph/View/back/base.html.twig
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse navbar-menu" id="navbar-collapsed">
             <ul class="nav navbar-nav navbar-list">
                 <li><a href="admin.php?page=artist">Ajouter un artiste</a></li>
-                <li><a href="admin.php?page=place">Ajouter un lieu</a></li>
+                <li><a href="admin.php?page=addPlace">Ajouter un lieu</a></li>
                 <li><a href="admin.php?page=concert">Ajouter un concert</a></li>
                 <li><a href="admin.php?page=news">Ajouter une actualité</a></li>
                 <li><a href="admin.php?page=food">Ajouter un foodtruck</a></li>
