--- a/src/Hph/View/back/place.html.twig
+++ b/src/Hph/View/back/place.html.twig
@@ -5,6 +5,8 @@
     <div class="container">
         <div class="col-md-offset-3 col-md-6">
             <div class="form-area text-center">
+                {{ form(form) }}
+                <!--
                 <form method="POST" action="../../../../admin/admin.php?page=addPlace">
                     <div class="form-group">
                         <label for="placeName">Nom du lieux</label>
@@ -22,6 +24,7 @@
                     </div>
                     <input type="submit" name="placeSubmit" class="btn btn-default" value="Créer">
                 </form>
+                -->
             </div>
         </div>
     </div>
