--- a/src/Hph/View/front/programmation.html.twig
+++ b/src/Hph/View/front/programmation.html.twig
@@ -44,14 +44,17 @@
             <div class="col-md-3 col-sm-6">
                 <a href="index.php?page=artiste">
                     <div class="thumbnail thumbnail-div prog-artist text-center">
-                        <img src="../../../web/img/artist/{{ artiste.imgArtist }}" class="img-responsive img-255 img-cancel">
+                        <img src="../../../web/img/artist/{{ artiste.imgArtist }}" class="img-responsive img-255
+{% if artiste.status == 'canceled' %}img-cancel{% endif %}">
                         <div class="content-div prog-info text-center">
                             <p class="info-text">{{ artiste.name }}</p>
                             <hr class="hr-min">
-                            <p class="info-text"> {{ artiste.concertStart | date("l H", "Europe/Paris") }} h</p>
+                            <p class="info-text"> {{ artiste.concert_start | date("l H\\hi", "Europe/Paris") }} </p>
                             {#<p class="info-text"> {{ artiste.concertStart | localizeddate('full', 'short', local) }}</p>#}
                         </div>
+                        {% if artiste.status == 'canceled' %}
                         <h1 class="prog-cancel font-dokyo">Annulé</h1>
+                        {% endif %}
                     </div>
                 </a>
             </div>
