--- a/src/Hph/View/back/news.html.twig
+++ b/src/Hph/View/back/news.html.twig
@@ -80,7 +80,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="img">Photo du lieu</label>
-                                        <input type="file" id="img" name="img" value="{{ news.imgNews }}">
+                                        <input type="file" id="img" name="img">
                                         <p class="help-block">Aide à la photo</p>
                                     </div>
                                     <div class="checkbox">
