--- a/src/Hph/View/front/programmation.html.twig
+++ b/src/Hph/View/front/programmation.html.twig
@@ -2,63 +2,63 @@
 {% block title %}Programmation{% endblock %}
 {% block titleMobile %}Artistes{% endblock %}
 {% block content %}
-<div class="text-center">
-    <div class="dropdown prog-dropdown">
-        <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-places"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Lieux <span class="caret"></span></button>
-        <ul class="dropdown-menu" aria-labelledby="filter-places">
-            <li><a href="#" class="font-circula">JARDINS DE L'EVÊCHE</a></li>
-            <li><a href="#" class="font-circula">LE 108</a></li>
-            <li><a href="#" class="font-circula">CCNO</a></li>
-            <li><a href="#" class="font-circula">SCENE NATIONALE D'ORLEANS</a></li>
-            <li><a href="#" class="font-circula">SCENE DE L'INSTITUT</a></li>
-            <li><a href="#" class="font-circula">HÔTEL DUPANLOUP</a></li>
-        </ul>
+    <div class="text-center">
+        <div class="dropdown prog-dropdown">
+            <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-places"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Lieux <span class="caret"></span>
+            </button>
+                <ul class="dropdown-menu" aria-labelledby="filter-places">
+                    {% for place in places %}
+                        <li><a href="?page=programmation&place_id={{ place.id }}" class="font-circula">{{ place.name }}</a></li>
+                    {% endfor %}
+                </ul>
+        </div>
+        <div class="dropdown prog-dropdown">
+            <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-days"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Soirs <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="filter-days">
+                <li><a href="?page=programmation&day=15" class="font-circula">Vendredi Soir</a></li>
+                <li><a href="?page=programmation&day=16" class="font-circula">Samedi Soir</a></li>
+            </ul>
+        </div>
+        <div class="dropdown prog-dropdown">
+            <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-local"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Groupes Locaux <span
+                        class="caret"></span></button>
+            <ul class="dropdown-menu" aria-labelledby="filter-local">
+                <li><a href="?page=programmation&soir=1" class="font-circula">Oui</a></li>
+                <li><a href="?page=programmation&soir=0" class="font-circula">Non</a></li>
+            </ul>
+        </div>
     </div>
-    <div class="dropdown prog-dropdown">
-        <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-days"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Soirs <span class="caret"></span></button>
-        <ul class="dropdown-menu" aria-labelledby="filter-days">
-            <li><a href="#" class="font-circula">Vendredi Soir</a></li>
-            <li><a href="#" class="font-circula">Samedi Soir</a></li>
-        </ul>
-    </div>
-    <div class="dropdown prog-dropdown">
-        <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-local"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Groupes Locaux <span class="caret"></span></button>
-        <ul class="dropdown-menu" aria-labelledby="filter-local">
-            <li><a href="#" class="font-circula">Oui</a></li>
-            <li><a href="#" class="font-circula">Non</a></li>
-        </ul>
-    </div>
-</div>
-<br />
-<br />
-<br />
-<div class="container">
-    <div class="row">
+    <br/>
+    <br/>
+    <br/>
+    <div class="container">
+        <div class="row">
 
 
-        {%for artiste in artistes %}
+            {% for artiste in artistes %}
 
-            <div class="col-md-3 col-sm-6">
-                <a href="index.php?page=artiste">
-                    <div class="thumbnail thumbnail-div prog-artist text-center">
-                        <img src="../../../web/img/artist/{{ artiste.imgArtist }}" class="img-responsive img-255
+                <div class="col-md-3 col-sm-6">
+                    <a href="index.php?page=artiste">
+                        <div class="thumbnail thumbnail-div prog-artist text-center">
+                            <img src="../../../web/img/artist/{{ artiste.imgArtist }}" class="img-responsive img-255
 {% if artiste.status == 'canceled' %}img-cancel{% endif %}">
-                        <div class="content-div prog-info text-center">
-                            <p class="info-text">{{ artiste.name }}</p>
-                            <hr class="hr-min">
-                            <p class="info-text"> {{ artiste.concert_start | date("l H\\hi", "Europe/Paris") }} </p>
-                            {#<p class="info-text"> {{ artiste.concertStart | localizeddate('full', 'short', local) }}</p>#}
+                            <div class="content-div prog-info text-center">
+                                <p class="info-text">{{ artiste.name }}</p>
+                                <hr class="hr-min">
+                                <p class="info-text"> {{ artiste.concert_start | date("l H\\hi", "Europe/Paris") }} </p>
+                                {#<p class="info-text"> {{ artiste.concertStart | localizeddate('full', 'short', local) }}</p>#}
+                            </div>
+                            {% if artiste.status == 'canceled' %}
+                                <h1 class="prog-cancel font-dokyo">Annulé</h1>
+                            {% endif %}
                         </div>
-                        {% if artiste.status == 'canceled' %}
-                        <h1 class="prog-cancel font-dokyo">Annulé</h1>
-                        {% endif %}
-                    </div>
-                </a>
-            </div>
-        {% endfor %}
+                    </a>
+                </div>
+            {% endfor %}
+        </div>
     </div>
-</div>
 {% endblock %}
