--- a/src/Hph/View/back/base.html.twig
+++ b/src/Hph/View/back/base.html.twig
@@ -8,10 +8,10 @@
     <title>{% block title %}{% endblock %}</title>
     <!-- Bootstrap -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
-    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/admin.css" rel="stylesheet">
-    <link href="../img/global/logo-min.png" rel="icon">
+    <link rel="stylesheet" href="../../../font-awesome/css/font-awesome.min.css">
+    <link href="../../../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../css/admin.css" rel="stylesheet">
+    <link href="../../../img/global/logo-min.png" rel="icon">
 
 </head>
 <body>
