--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -17,7 +17,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
     <div class="container-fluid">
         <div class="navbar-header text-center">
-            <a href="/"><img src="img/global/logo-min.png" class="navbar-brand"></a>
+            <a href="../../../"><img src="../../../img/global/logo-min.png" class="navbar-brand"></a>
             <button type="button" class="navbar-toggle collapsed navbar-burger" data-toggle="collapse" data-target="#navbar-collapsed" aria-expanded="false">
                 <span class="sr-only">Menu</span>
                 <span class="icon-bar"></span>
@@ -31,30 +31,30 @@
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Programmation <span class="caret"></span></a>
                     <ul class="dropdown-menu navbar-dropdown">
-                        <li><a href="/programmation">Artistes</a></li>
-                        <li><a href="/planning">Planning</a></li>
+                        <li><a href="../../../programmation">Artistes</a></li>
+                        <li><a href="../../..//planning">Planning</a></li>
                     </ul>
                 </li>
                 <!-- class active -->
-                <li><a href="/ticket">Billetterie</a></li>
-                <li><a href="/cashless">Cashless</a></li>
+                <li><a href="../../../ticket">Billetterie</a></li>
+                <li><a href="../../../cashless">Cashless</a></li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">La vie au festival <span class="caret"></span></a>
                     <ul class="dropdown-menu navbar-dropdown">
-                        <li><a href="/food">Se restaurer</a></li>
-                        <li><a href="/place" id="placeLink">Lieux</a></li>
+                        <li><a href="../../../food">Se restaurer</a></li>
+                        <li><a href="../../../place" id="placeLink">Lieux</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Infos Pratiques <span class="caret"></span></a>
                     <ul class="dropdown-menu navbar-dropdown">
-                        <li><a href="/volunteer">Bénévolat</a></li>
-                        <li><a href="/transport">Comment venir</a></li>
-                        <li><a href="/dimaorl">Dimanche à Orléans</a></li>
+                        <li><a href="../../../volunteer">Bénévolat</a></li>
+                        <li><a href="../../../transport">Comment venir</a></li>
+                        <li><a href="../../../dimaorl">Dimanche à Orléans</a></li>
                     </ul>
                 </li>
-                <li><a href="/partner">Partenaires</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="../../../partner">Partenaires</a></li>
+                <li><a href="../../../contact">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right social hidden-xs">
                 <li><a href="https://www.facebook.com/hoppophop/"><i class="fa fa-facebook-square navbar-logo" aria-hidden="true"></i></a></li>
@@ -78,25 +78,25 @@
                         {% if partners|length == 1 %}
                             <div class="col-xs-12">
                                 <a href="{{ partner.url }}" class="thumbnail thumbnail-div">
-                                    <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                                    <img src="../../../img/partner/{{ partner.imgPartner }}" class="img-responsive">
                                 </a>
                             </div>
                         {% elseif partners|length == 2 %}
                             <div class="col-md-6 col-xs-6">
                                 <a href="{{ partner.url }}" class="thumbnail thumbnail-div">
-                                    <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                                    <img src="../../../img/partner/{{ partner.imgPartner }}" class="img-responsive">
                                 </a>
                             </div>
                         {% elseif (partners|length == 3) or (partners|length == 5) or (partners|length == 6) %}
                             <div class="col-md-4 col-xs-4">
                                 <a href="{{ partner.url }}" class="thumbnail thumbnail-div">
-                                    <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                                    <img src="../../../img/partner/{{ partner.imgPartner }}" class="img-responsive">
                                 </a>
                             </div>
                         {% elseif (partners|length == 4) or (partners|length == 7) or (partners|length == 8) %}
                             <div class="col-md-3 col-xs-3">
                                 <a href="{{ partner.url }}" class="thumbnail thumbnail-div">
-                                    <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                                    <img src="../../../img/partner/{{ partner.imgPartner }}" class="img-responsive">
                                 </a>
                             </div>
                         {% endif %}
